Closed Bug 1645668 Opened 4 years ago Closed 4 years ago

Sound indicator doesn't work sometimes

Categories

(Core :: Audio/Video: Playback, defect, P3)

77 Branch
defect

Tracking

()

VERIFIED FIXED
mozilla80
Tracking Status
firefox-esr68 --- unaffected
firefox-esr78 --- wontfix
firefox77 --- wontfix
firefox78 --- wontfix
firefox79 --- verified
firefox80 --- verified

People

(Reporter: AvlasenkoVitaliy, Assigned: alwu)

References

(Regression)

Details

(Keywords: regression)

Attachments

(3 files)

User Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:77.0) Gecko/20100101 Firefox/77.0

Steps to reproduce:

Open music on https://vk.com and play some song.

Actual results:

Music indicator disappears after few seconds even though the song is still playing. It reappear if rewind a song.

Expected results:

Indicator will ALWAYS be shown.

Bugbug thinks this bug should belong to this component, but please revert this change in case of error.

Component: Untriaged → Audio/Video: Playback
Product: Firefox → Core

I can reproduce this.

Assignee: nobody → alwu
Severity: -- → S3
Priority: -- → P3
Attachment #9160249 - Attachment description: Bug 1645668 - part1 : reset audio track audible state when aborting current load. → Bug 1645668 - part1 : reset audible state when aborting current load.
Pushed by alwu@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/fe9225d28223
part1 : reset audible state when aborting current load. r=bryce
https://hg.mozilla.org/integration/autoland/rev/3feca854d60f
part2 : add test. r=bryce
Status: UNCONFIRMED → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla80

Comment on attachment 9160249 [details]
Bug 1645668 - part1 : reset audio track audible state when aborting current load.

Beta/Release Uplift Approval Request

  • User impact if declined: In some websites, the sound indicator would not appear even if the website is playing audio.
  • Is this code covered by automated tests?: Yes
  • Has the fix been verified in Nightly?: No
  • Needs manual test from QE?: Yes
  • If yes, steps to reproduce: See comment0.
  • List of other uplifts needed: None
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): It resets the media element's internal state that is supposed to be reset when we abort the current load. It doesn't introduce any new functionality change and new feature.
  • String changes made/needed: None
Attachment #9160249 - Attachment description: Bug 1645668 - part1 : reset audible state when aborting current load. → Bug 1645668 - part1 : reset audio track audible state when aborting current load.
Attachment #9160249 - Flags: approval-mozilla-beta?
Attachment #9160250 - Flags: approval-mozilla-beta?
Has Regression Range: --- → yes

Comment on attachment 9160249 [details]
Bug 1645668 - part1 : reset audio track audible state when aborting current load.

Approved for 79.0b3. Thanks for including a test.

Attachment #9160249 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
Attachment #9160250 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
QA Whiteboard: [qa-triaged]
Flags: qe-verify+

I reproduced the issue on Firefox Nightly 79.0a1 (2020-06-14) under macOS 10.15.5 using the STR from Comment 0.

This issue is fixed on Firefox 79.0b3 and Firefox 80.0a1 (2020-07-02). Tests were performed under macOS 10.15.5, Ubuntu 20.04 and Windows 10.

Status: RESOLVED → VERIFIED
Flags: qe-verify+
Regressions: 1652460
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: